tests/models/struct/unnamed/f64/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    f64
);
fn main() {}
